--- a/components/ProfileCard/ProfileCard.module.scss
+++ b/components/ProfileCard/ProfileCard.module.scss
@@ -2,7 +2,7 @@
 
 .CardMain {
   background-color: #fff;
-  margin: 3rem auto;
+  margin: 1rem auto;
   border-radius: 5px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   display: flex;
@@ -569,7 +569,7 @@
 @media only screen and (max-width: 348px) {
   .CardMain {
     flex-direction: column;
-    margin: 3rem 1rem;
+    margin:  1rem;
     width: auto;
 
     .profileSection {
