--- a/pages/SearchPage/Search.module.scss
+++ b/pages/SearchPage/Search.module.scss
@@ -501,6 +501,19 @@
   width: 66%;
   padding: 0.6rem;
   text-align: center;
+
+  Button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .loginSpiner {
+      height: 20px;
+      width: 20px;
+      margin-right: 10px;
+      color: #ffffff !important;
+    }
+  }
 }
 
 .active {
