--- a/pages/ShowInterest/Components/Interest.module.scss
+++ b/pages/ShowInterest/Components/Interest.module.scss
@@ -13,7 +13,7 @@
 
 .flexrowMar {
   flex-direction: row;
-  margin: 3rem auto;
+  margin: 1rem auto;
   gap: 2rem;
 }
 .componentMain {
@@ -24,11 +24,10 @@
 }
 
 @media only screen and (max-width: 1023px) {
-  .card_container_main {
-    width: 85%;
-    gap: 2rem;
-    flex-wrap: wrap;
-  }
+  // .card_container_main {
+  //   width: 85%;
+  //   margin: 2rem;
+  // }
 }
 @media only screen and (max-width: 767px) {
   .card_container_main {
