--- a/pages/ShowInterest/ShowInterest.module.scss
+++ b/pages/ShowInterest/ShowInterest.module.scss
@@ -55,11 +55,9 @@
   .search_main {
     .tabSection {
       margin: auto;
-      margin-top: -10rem;
-      transform: translateX(-0%);
+      margin-top: -7rem;
+      transform: translateX(0%);
       flex-wrap: nowrap;
-      justify-content: flex-start;
-      overflow-x: auto;
       position: initial;
     }
   }
@@ -68,8 +66,12 @@
   .search_main {
     .tabSection {
       gap: 1rem;
-      margin-top: -13rem;
-      width: 90%;
+      margin-top: -8rem;
+      justify-content: center;
+      flex-wrap: wrap;
+      width: auto;
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
   }
 }
@@ -77,7 +79,7 @@
 @media only screen and (max-width: 300px) {
   .search_main {
     .tabSection {
-      margin-top: -13rem;
+      margin-top: -10rem;
     }
   }
 }
