--- a/components/Header/Navoptions.module.scss
+++ b/components/Header/Navoptions.module.scss
@@ -2,19 +2,19 @@
 
 .sideBar {
   background: $more_transparent_maroon;
-  color: #fff;
   height: -webkit-fill-available;
   width: 400px;
   position: absolute;
   top: 0;
   left: 220px;
   box-shadow: 2px 2px 5px 0px rgb(0 0 0 / 75%);
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  align-items: start;
   padding: 0.75rem;
-  >a {
+  grid-template-rows: repeat(6, 1fr);
+
+  a {
     color: #fff;
     height: -webkit-fill-available;
     width: 400px;
@@ -25,27 +25,27 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    align-content: flex-start;
   }
 
-  >span {
+  > span {
     color: #fff;
     cursor: pointer;
     font-size: 14px;
-    /* width: 133px; */
-    display: block;
+    display: flex;
     line-height: 35px;
-    /* padding-left: 10px; */
     white-space: nowrap;
     overflow: hidden;
-    /* text-overflow: ellipsis; */
     padding: 0.5rem 0.5rem !important;
     height: fit-content;
     min-width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   :hover {
     background-color: $red_bg;
+    border-radius: 5px;
   }
 }
 
