fixes typescript error

--- a/pages/ProfileMatch/ProfileMatch.module.scss
+++ b/pages/ProfileMatch/ProfileMatch.module.scss
@@ -9,7 +9,7 @@
   height: 22rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: space-between;
 
   h3{
     color: #fff;
