--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -91,13 +91,13 @@
   height: 100vh;
   position: fixed;
   top: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
   background: hsl(0deg 0% 0% / 70%);
   z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
+  left: 0;
 
   Form {
     width: 35%;
