--- a/components/MemberShipCard/MenbershipCard.module.scss
+++ b/components/MemberShipCard/MenbershipCard.module.scss
@@ -1,5 +1,7 @@
+@import "../../styles/constants.scss";
+
 .MCardContainer {
-  width: 32%;
+  width: 100%;
   height: fit-content;
   background-color: #fff;
   padding: 25px;
@@ -107,9 +109,45 @@
     margin-top: 1rem;
     text-align: center;
 
-    button {
+    .customButton {
+      padding: 0.75rem 2.5rem;
+      font-weight: $fw500;
+      outline: none;
+      border: 0;
+      border-radius: 0.25rem;
+      background-color: $red_bg;
+      color: $white_txt;
+      transition: 0.5s ease-in-out;
       width: 100%;
+      margin: 1rem auto;
+
+      &:hover {
+        color: $red_txt !important;
+        background-color: $milkWhite_bg;
+        outline: 3px solid $red_txt;
+        transition: 0.5s ease-in-out;
+      }
     }
+    .ActioncustomButton {
+      padding: 0.45rem 1rem;
+      font-weight: $fw500;
+      outline: none;
+      border: 0;
+      border-radius: 0.25rem;
+      background-color: $red_bg;
+      color: $white_txt;
+      transition: 0.5s ease-in-out;
+      width: auto;
+      margin: 1rem;
+
+      &:hover {
+        color: $red_txt !important;
+        background-color: $milkWhite_bg;
+        outline: 3px solid $red_txt;
+        transition: 0.5s ease-in-out;
+      }
+    }
+
     p {
       font-size: 12px;
       color: #2e334d;
@@ -129,16 +167,6 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-@media only screen and (max-width: 992px) {
-  .MCardContainer {
-    width: 48%;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .MCardContainer {
-    width: -webkit-fill-available;
-  }
-}
 // @media only screen and (max-width: 992px) {
 //   .MCardContainer {
 //     width: -webkit-fill-available;
