--- a/pages/MembershipPricing/MembershipPricing.module.scss
+++ b/pages/MembershipPricing/MembershipPricing.module.scss
@@ -19,5 +19,28 @@
     gap: 1rem;
     flex-wrap: wrap;
     align-items: center;
+
+    .card_main {
+      width: 32%;
+    }
+  }
+}
+
+@media only screen and (max-width: 1065px) {
+  .bg {
+    .card_container {
+      .card_main {
+        width: 48%;
+      }
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .bg {
+    .card_container {
+      .card_main {
+        width: -webkit-fill-available;
+      }
+    }
   }
 }
