--- a/pages/SearchPage/Search.module.scss
+++ b/pages/SearchPage/Search.module.scss
@@ -631,7 +631,25 @@
         margin-bottom: 0%;
       }
     }
+
+    .Search_body {
+      form {
+        .search_group {
+          flex-direction: column;
+          gap: 1rem;
+          .search_lable {
+            width: 100%;
+            margin: auto;
+            text-align: initial;
+          }
+          input {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
+
 }
 @media only screen and (max-width: 424px) {
   .SearchWrapperMain {
