work on responsive an d some dev fixes

--- a/pages/SearchPage/Search.module.scss
+++ b/pages/SearchPage/Search.module.scss
@@ -642,7 +642,7 @@
             margin: auto;
             text-align: initial;
           }
-          input {
+          .input_search {
             width: 100%;
           }
         }
