complete all bugs and chagnes

--- a/pages/PartnerMatchProfile/PartnerMatchProfile.module.scss
+++ b/pages/PartnerMatchProfile/PartnerMatchProfile.module.scss
@@ -102,6 +102,10 @@
   }
 }
 
+.galleryModel{
+  // z-index: 100;
+}
+
 @media only screen and (max-width: 990px) and (min-width: 768px) {
   .background_header {
     width: 100%;
