--- a/components/ImageGallery/ImageGallery.module.scss
+++ b/components/ImageGallery/ImageGallery.module.scss
@@ -2,6 +2,9 @@
   background-color: #fff;
   border-radius: 2px;
   padding: 2rem;
+  h5{
+    text-transform: capitalize;
+  }
 
   .addMorePhoto {
     background-color: rgba(0, 0, 0, 0.623);
@@ -23,12 +26,12 @@
     justify-content: flex-start;
 
     a {
-      width: 23%;
+      width: 31%;
       background-color: #eeeeee;
 
       img {
         width: 100%;
-        height: 20rem;
+        height: 15rem;
         object-fit: cover;
       }
 
