--- a/pages/PartnerMatchProfile/PartnerMatchProfile.module.scss
+++ b/pages/PartnerMatchProfile/PartnerMatchProfile.module.scss
@@ -102,8 +102,11 @@
   }
 }
 
-.galleryModel{
-  // z-index: 100;
+.galleryModel {
+  .galleryModel_title {
+    text-transform: capitalize;
+    font-weight: 500
+  }
 }
 
 @media only screen and (max-width: 990px) and (min-width: 768px) {
